@@ -1375,7 +1375,7 @@ name|LOG
 operator|.
 name|info
 argument_list|(
-literal|"Renaming tmp dir: "
+literal|"Moving tmp dir: "
 operator|+
 name|tmpPath
 operator|+
@@ -1384,29 +1384,15 @@ operator|+
 name|finalPath
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-operator|!
-name|fs
-operator|.
-name|rename
+name|renameOrMoveFiles
 argument_list|(
+name|fs
+argument_list|,
 name|tmpPath
 argument_list|,
 name|finalPath
 argument_list|)
-condition|)
-block|{
-throw|throw
-operator|new
-name|HiveException
-argument_list|(
-literal|"Unable to commit result directory: "
-operator|+
-name|finalPath
-argument_list|)
-throw|;
-block|}
+expr_stmt|;
 comment|// Step2: Clean any temp files from finalPath
 name|Utilities
 operator|.
@@ -1454,6 +1440,164 @@ argument_list|,
 name|success
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Rename src to dst, or in the case dst already exists, move files in src     * to dst.  If there is an existing file with the same name, the new file's     * name will be appended with "_1", "_2", etc.    * @param fs the FileSystem where src and dst are on.      * @param src the src directory    * @param dst the target directory    * @throws IOException     */
+specifier|static
+specifier|public
+name|void
+name|renameOrMoveFiles
+parameter_list|(
+name|FileSystem
+name|fs
+parameter_list|,
+name|Path
+name|src
+parameter_list|,
+name|Path
+name|dst
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+operator|!
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|dst
+argument_list|)
+condition|)
+block|{
+name|fs
+operator|.
+name|rename
+argument_list|(
+name|src
+argument_list|,
+name|dst
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+comment|// move file by file
+name|FileStatus
+index|[]
+name|files
+init|=
+name|fs
+operator|.
+name|listStatus
+argument_list|(
+name|src
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|files
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Path
+name|srcFilePath
+init|=
+name|files
+index|[
+name|i
+index|]
+operator|.
+name|getPath
+argument_list|()
+decl_stmt|;
+name|String
+name|fileName
+init|=
+name|srcFilePath
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
+name|Path
+name|dstFilePath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|dst
+argument_list|,
+name|fileName
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|dstFilePath
+argument_list|)
+condition|)
+block|{
+name|int
+name|suffix
+init|=
+literal|0
+decl_stmt|;
+do|do
+block|{
+name|suffix
+operator|++
+expr_stmt|;
+name|dstFilePath
+operator|=
+operator|new
+name|Path
+argument_list|(
+name|dst
+argument_list|,
+name|fileName
+operator|+
+literal|"_"
+operator|+
+name|suffix
+argument_list|)
+expr_stmt|;
+block|}
+do|while
+condition|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+name|dstFilePath
+argument_list|)
+condition|)
+do|;
+block|}
+name|fs
+operator|.
+name|rename
+argument_list|(
+name|srcFilePath
+argument_list|,
+name|dstFilePath
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
